# CMake_Practice

./: CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt
